--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-polymer": "^1.1.0",
+    "recursive-readdir": "^1.3.0",
     "request": "^2.69.0",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
@@ -52,6 +53,7 @@
     "gulp-sym": "0.0.14",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "parse-torrent-name": "^0.5.4",
     "run-sequence": "^1.1.5"
   }
 }
