--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "photon-media",
+  "name": "Sorter",
   "version": "0.0.1",
   "author": "Ethan Coward",
   "main": "js/core.js",
@@ -17,14 +17,18 @@
     "get-port": "^2.1.0",
     "localforage": "^1.4.0",
     "lodash": "^4.6.1",
+    "mime": "^1.3.4",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "node-uuid": "^1.4.7",
+    "parse-torrent-name": "^0.5.4",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-polymer": "^1.1.0",
     "recursive-readdir": "^1.3.0",
     "request": "^2.69.0",
+    "rimraf": "^2.5.2",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
     "trakt-api": "^0.4.0",
